<resources>
    <string name="app_name">SNSProject</string>
    <string name="item_MyPage">myPage</string>
    <string name="item_SignIn">로그인</string>

    <!-- myPage String -->
    <string name="icon_modify">편집하기</string>
    <string name="tv_mj">사진은 며칠 전에 본 귀여운 강아지입니다!!\n 저는 강아지를 좋아해요\n 다 같이 으쌰으쌰해서 잘 마무리 해봅시다!!</string>
    <string name="tv_dh">3주동안 고생 많이 하셧습니다\n 남은 기간도 열심히 같이 달려봅시다!!\n사진은 그냥 바다 이미지입니다</string>
    <string name="tv_hh">저희 집 강아지를 소개합니다\n 말티즈\n | 13년 5개월 | 3kg</string>
    <string name="tv_sj">고양이 무서워하던 저를 좋아하게 만들어준 길고양이예요.\n 3주 동안 잘 부탁드립니다\n 제가 맡은 몫 열심히 하겠습니다 ~</string>

    <string name="signUp_name">이름</string>
    <string name="signUp_id">ID</string>
    <string name="signUp_pw">Password</string>
    <string name="signUp_mbti">MBTI</string>
    <string name="signIn_login">LOGIN</string>
    <string name="signIn_signup">SIGN UP</string>
    <string name="btn_cancel">CENCEL</string>

    <string name="txt_creatername">작성자</string>
    <string name="txt_postTitle">제목</string>
    <string name="btn_done">등록하기</string>
</resources>